--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,3 +1,4 @@
 :root
-  --color-link #E6900A
-  --color-primary #E6900A
+  --color-link #b689d3
+  --color-primary #b689d3
+  /* --color-primary #6646fa */
